# RaftLib

./: CMakeLists.txt  README.md  raft  raftalgorithm  raftio  raftlib.pc.in  raftrandom
cmake/: CheckSTD.cmake
examples/cppalgo/search/: CMakeLists.txt  bmh.cpp
examples/general/multiply/: CMakeLists.txt
examples/general/pi/: CMakeLists.txt
examples/general/rbzip2/: CMakeLists.txt
examples/general/readfile/: CMakeLists.txt
examples/general/singlequeue/: CMakeLists.txt
examples/general/sum/: CMakeLists.txt
raftinc/: CMakeLists.txt  alloc_traits.tcc  allocate.hpp  autorelease.tcc  autoreleasebase.hpp  autoreleaseiterator.tcc  common.hpp  dag.hpp  defs.hpp  exceptions.hpp  fifo.hpp  fifo_vl.tcc  fileio.tcc  graphtools.hpp  hh.hpp  join.tcc  kernel.hpp  kernelkeeper.tcc  kernelport.hpp  kernelport_operators.tcc  kpair.hpp  makedot.hpp  map.hpp  mapbase.hpp  mux.tcc  oneshottask.hpp  pollingworker.hpp  port.hpp  port_info.hpp  portiterator.hpp  rafttypes.hpp  ringbuffertypes.hpp  roundrobin.hpp  runtime.hpp  runtimes.hpp  signalhandler.hpp  singleton.hpp  split.tcc  splitmethod.hpp  streamingdata.hpp  (+5 more)
raftinc/allocate/: allocate.hpp  allocate_fifo.hpp  allocate_mix.hpp  allocate_new.hpp  allocators.hpp  datamanager.tcc  fifo.hpp  fifoabstract.tcc  fifoallocmeta.hpp  fifofunctor.hpp  functors.hpp  mixallocmeta.hpp  ringbuffer.tcc  ringbuffer_commonbase.tcc  ringbufferbase.tcc  ringbufferbase_monitored.tcc  ringbufferbase_mutexed.tcc  ringbufferheap.tcc  ringbufferinfinite.tcc  ringbufferlinked.tcc  ringbuffershm.tcc
raftinc/allocate/buffer/: blocked.hpp  buffertypes.hpp  data.tcc  database.tcc  dataheapbase.tcc  datashmbase.tcc  inline_traits.tcc  internaldefs.hpp  pointer.hpp  signal.hpp  threadaccess.hpp
raftinc/partition/: graph.tcc  partition.hpp  partition_basic.hpp  partition_priority.hpp  partition_scotch.hpp  partitioners.hpp
raftinc/schedule/: graphschedule.hpp  schedule.hpp  schedule_basic.hpp  schedule_burst.hpp  schedule_cv.hpp  schedule_mix.hpp  schedule_oneshot.hpp  schedule_pollingsource.hpp  schedulers.hpp
raftinc/utils/: chunkiterator.tcc  filechunk.tcc  fileio.tcc  foreach.tcc  lambdak.tcc  parallelk.hpp  print.tcc  random.tcc  readeach.tcc  search.tcc  writeeach.tcc
src/: CMakeLists.txt  allocate.cpp  kernel.cpp  poolschedule.cpp  port_info.cpp  portiterator.cpp  roundrobin.cpp  schedule.cpp  splitmethod.cpp  vlalloc.cpp
testsuite/: CMakeLists.txt  allocate.cpp  allocatePopExternal.cpp  allocatePopInternal.cpp  allocatePopInternalObject.cpp  allocatePopPush.cpp  allocateSendPush.cpp  allocateSendRandomPush.cpp  armqMini.cpp  armqMix.cpp  armqMixIgnoreHint0Clone.cpp  armqMixIgnoreHintFullQ.cpp  bracketsTest.cpp  bulletAllocateInternalObject.cpp  chain.cpp  chainMultiplePorts.cpp  disconnectedGraph.cpp  doesntFitInCacheLine.cpp  fitInCacheLine.cpp  fixedMatchTest.cpp  foreach.cpp  generate.tcc  isExtAlloc.cpp  isExtArray.cpp  isExtClass.cpp  isInlineClass.cpp  isInlineNonClass.cpp  lambdatest.cpp  noPortException.cpp  partitionTest.cpp  peek.cpp  pipeline.tcc  portTypeException.cpp  portname.cpp  ringbufferLinked.cpp  stdlibsupport.cpp  streamingData.cpp  stringAlloc.cpp  twiceAdd.cpp  uniform.cpp  (+1 more)
